# git-commit-helper

./: .gitignore  CHANGELOG.md  Cargo.toml  PROJECT_SUMMARY.md  PUBLISHING.md  QUICKSTART.md  README.md  RELEASE.md  build.sh  main.rs  verify.sh
.claude/command/: commit.md
src/: main.rs
